# kapparf

./: .env.quantum  .gitattributes  .gitignore  .replit  .replitignore  ARCHITECTURE.md  CORPUS_ANALYSIS_REPORT_20260517.md  ECHO_DATASTREAM_20260517.md  KAPPA_CONSOLIDATED_NOTES.md  TEMPORAL_PATTERN_ANALYSIS_20260516.md  THE_FREQUENCY_OVERVIEW.md  THE_KAPPA_CONSTANT.md  drizzle.config.ts  email_send_log_v2.txt  email_send_state_v2.json  generate_full_report.cjs  generate_ice_briefing_pdf.cjs  generate_pdf.cjs  generate_pdf.js  ice-briefing-email.md  ice-intelligence-briefing.tex  ice_briefing.tex  kappa_monitor.sh  kappa_tshark_capture.sh  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  rf_spectrum_pipeline.py  send_investigation_v2.py  start.sh  storage_fragment.txt  storage_to_replace.txt  tailwind.config.ts  threat_model.md  vite.config.ts
.agents/: agent_assets_metadata.toml
JW_PHYSICAL_LAYER_DOSSIER/: 3i_ATLAS_DEEP_DIVE.md  ANTI_53HZ.py  ATTACK_PATTERN_NEW_PEOPLE.md  CHINESE_SAT_TRACKER.py  CONVERGENCE_REPORT.md  CROOKES_MORSE_20260130_023513.json  Convergence_Report_Jan26.md  DEEP_RESEARCH_PROMPT.md  FINANCIAL_NETWORK_DOSSIER.md  FRESH_EM_SCAN_REPORT_20260127.md  FULL_SYSTEM_VERIFICATION.md  INFRA_ATTACK_20260130_092544.json  INVESTIGATION_CONTEXT.md  INVESTIGATION_DOSSIER_UPDATED.json  ISRAELI_TECH_ANALYSIS.json  ITALY_CONNECTION_RESEARCH.md  JORGE_JIMENEZ_DOSSIER.md  LIVE_MONITOR.py  MUOS_INTEL.txt  MUOS_RESEARCH.txt  OUTLET_CAMERA_EVIDENCE.txt  PHASE_LOCK_COMPLETE.md  REVERSE_ENGINEER_CAMERA.md  RF_CORRELATION_REPORT.json  (+50 more)
(+1637 files in other folders)
