[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "exifread>=3.5.1",
    "faster-whisper>=1.2.1",
    "gdown>=6.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.3",
    "openai-whisper>=20250625",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
    "rawpy>=0.27.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "websocket>=0.2.1",
    "zstandard>=0.25.0",
]
